- Support for Import/Export entire Server List
- Optional sound event for user typing private message
- Replace readonly edit fields by statis label in "User info" dialog
- Only show available info in "User info" dialog
- Ability to copy all User Info to clipboard in "User Info" dialog
- Ability to search by IP or username in "Banned Users" dialog
- Support Idle Time on Linux (X11)
Android Client
- Toggle channel operator does not show password dialog if user has user-right to change channel operator
iOS Client
-
Server
-

Version 5.16.1, 2024/04/16
Default Qt Client
- Fixed issue where initial sound event was played over and over again

Version 5.16, 2024/04/08
Default Qt Client
- Dates and times are now formatted in user locale on "User accounts" dialog and main window's files tab
- Option to show server's message of the day in a welcome dialog box
- Option to announce server name on some server related TTS events
- Option to show channel topic in channel list
- Don't display server name when disconnected from server where not authentified
- Ask for accessibility settings on Linux at first startup
- Fixed "Gender" property not being saved in .tt files
- Fixed sort by size on file list
- OPUS codec updated to v1.5.1
- Windows and macOS updated to Qt 6.7.0
Android Client
- Admins can upload files to channels they have not joined
- It is now possible to move users to root channel
- Navigating back returns to Channels-tab prior to disconnecting
- Navigating back also displays root channel
- User menu action to grant/revoke channel operator
- Subscriptions for intercepting users
- OPUS codec updated to v1.5.1
- Fixed crash issue when entering Text-To-Speech settings
- Fixed crash issue when updating text messages
iOS Client
- OPUS codec updated to v1.5.1
Server
-

Version 5.15.1, 2023/12/21
Default Qt Client
- Fixed crashes and missing dialogs when using VoiceOver on macOS
- Changed to Qt 6.7.0beta1 on macOS

Version 5.15, 2023/12/20
Default Qt Client